Check for `'development'` env var in postinstall script

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -24,6 +24,7 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+      - run: npm run dev-postinstall
       - name: Download branch artifact
         uses: dawidd6/action-download-artifact@v2
         with:
