--- a/.github/workflows/test-expression.yml
+++ b/.github/workflows/test-expression.yml
@@ -18,4 +18,5 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+      - run: npm run dev-postinstall
       - run: npm run test-expression
