--- a/.github/workflows/upload-benchmarks.yml
+++ b/.github/workflows/upload-benchmarks.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Install
         run: npm ci
 
+      - run: npm run dev-postinstall
+
       - name: Build benchmarks
         run: npm run build-benchmarks
 
