--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+      - run: npm run dev-postinstall
       - run: npm run generate-typings
       - run: npm run build-prod-min
       - run: npm run build-prod
