--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install GL JS
         run: npm ci
+
+      - run: npm run dev-postinstall
       
       - name: Build GL JS
         run: |
