--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -27,6 +27,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
+      - run: npm run dev-postinstall
       - run: npm run test-unit
 
   test_unit_ubuntu:
@@ -49,4 +50,5 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
+      - run: npm run dev-postinstall
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-unit
