--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maplibre-gl",
   "description": "BSD licensed community fork of mapbox-gl, a WebGL interactive maps library",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "main": "dist/maplibre-gl.js",
   "style": "dist/maplibre-gl.css",
   "license": "BSD-3-Clause",
@@ -24,7 +24,6 @@
     "earcut": "^2.2.3",
     "geojson-vt": "^3.2.1",
     "gl-matrix": "^3.4.3",
-    "husky": "^7.0.4",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
     "potpack": "^1.0.2",
@@ -95,6 +94,7 @@
     "eslint-plugin-react": "^7.28.0",
     "gl": "^5.0.0",
     "glob": "^7.2.0",
+    "husky": "^7.0.4",
     "is-builtin-module": "^3.1.0",
     "jest": "^27.5.1",
     "jest-canvas-mock": "^2.3.1",
@@ -171,8 +171,7 @@
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
     "benchmark": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/run-benchmarks.ts",
     "gl-stats": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/gl-stats.ts",
-    "postinstall": "npm run codegen && npm run generate-query-test-fixtures",
-    "prepare": "husky install"
+    "postinstall": "node ./postinstall.js"
   },
   "files": [
     "build/",
