--- a/.github/workflows/test-symbol-shaping.yml
+++ b/.github/workflows/test-symbol-shaping.yml
@@ -18,5 +18,7 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+        env:
+            NODE_ENV: development
       - run: npm run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-symbol-shaping
