--- a/.github/workflows/test-expression.yml
+++ b/.github/workflows/test-expression.yml
@@ -18,4 +18,6 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+        env:
+            NODE_ENV: development
       - run: npm run test-expression
