--- a/.github/workflows/test-render.yml
+++ b/.github/workflows/test-render.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: 16
           architecture: x64
       - run: npm ci
+        env:
+            NODE_ENV: development
       - run: npm run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-render
       - uses: actions/upload-artifact@v2
