--- a/.github/workflows/test-browser.yml
+++ b/.github/workflows/test-browser.yml
@@ -1,4 +1,4 @@
-name: Integration Test - Browser Interaction
+name: Integration Test - Browser
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
 
 jobs:
   test_browser:
-    name: ubuntu-latest
-    runs-on: ubuntu-latest
+    name: macos-latest
+    runs-on: macos-latest
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
@@ -19,4 +19,4 @@ jobs:
           architecture: x64
       - run: npm ci
       - run: npm run build-dev
-      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-browser
+      - run: npm run test-browser
