Ignore svg-load and svg-inline css functions

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -11,6 +11,9 @@
     }],
     "property-no-vendor-prefix": [true, {
       "ignoreProperties": ["/user-select/"]
+    }],
+    "function-no-unknown": [true, {
+      "ignoreFunctions": ["svg-load", "svg-inline"]
     }]
   },
   "ignoreFiles": [
