--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,4 @@
 {
-  "ts-node": {
-    "swc": true
-  },
   "compilerOptions": {
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
@@ -11,7 +8,7 @@
     "isolatedModules": true,
     //"importsNotUsedAsValues": "preserve",
     "jsx": "react",
-    "module": "es2022",
+    "module": "esnext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
