Add v1 npm dist tag
remove analyze workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,6 +170,6 @@ jobs:
 
       - name: Publish NPM package
         run: |
-          yarn publish --non-interactive
+          yarn publish --non-interactive --tag v1
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_ORG_TOKEN }}
