--- a/package.json
+++ b/package.json
@@ -158,14 +158,14 @@
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-build": "jest ./test/build",
-    "test-symbol-shaping": "jest ./test/integration/symbol-shaping",
-    "test-style-spec": "jest ./test/integration/style-spec",
-    "test-browser": "jest -c ./jest.config.e2e.js ./test/integration/browser",
+    "test-build": "jest --roots ./test/build",
+    "test-symbol-shaping": "jest --roots ./test/integration/symbol-shaping",
+    "test-style-spec": "jest --roots ./test/integration/style-spec",
+    "test-browser": "jest -c ./jest.config.e2e.js --roots ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/integration/render/render.test.ts",
-    "test-query": "jest -c ./jest.config.e2e.js test/integration/query",
-    "test-expression": "jest test/integration/expression",
-    "test-unit": "jest ./src",
+    "test-query": "jest -c ./jest.config.e2e.js --roots ./test/integration/query",
+    "test-expression": "jest --roots ./test/integration/expression",
+    "test-unit": "jest --roots ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders",
     "benchmark": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/run-benchmarks.ts",
     "gl-stats": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/gl-stats.ts",
