--- a/.github/workflows/remove-pr-demo.yml
+++ b/.github/workflows/remove-pr-demo.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   remove-pr-demo:
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
     - uses: actions/checkout@v3
       with:
