Add missing name to dist/package.json
To avoid Microsoft API Extractor `The required field name was not found` error

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Write dist/package.json
         run: |
-          echo "{ \"type\": \"commonjs\" }" > dist/package.json
+          echo "{ \"type\": \"commonjs\", \"name\": \"maplibre-gl\" }" > dist/package.json
 
       - name: Create Archive
         run: |
