Generate cjs and update package.json to use it. remove old fix.

--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -12,7 +12,7 @@
     "maplibre-gl-js"
   ],
   "license": "ISC",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "type": "module",
   "scripts": {
