--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ test/integration/dist/**/*.json
 test/integration/query/dist/fixtures.json
 */**/*.g.ts
 .eslintcache
-src/style-spec/dist/index.js
+src/style-spec/dist/index.cjs
 _batfish_site
 _batfish_tmp
 _site
