--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maplibre/maplibre-gl-style-spec",
   "description": "a specification for maplibre gl styles",
-  "version": "15.1.0",
+  "version": "16.0.0",
   "author": "MapLibre",
   "keywords": [
     "mapbox",
@@ -12,7 +12,7 @@
     "maplibre-gl-js"
   ],
   "license": "ISC",
-  "main": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "type": "module",
   "scripts": {
