--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "is-builtin-module": "^3.1.0",
     "jest": "^28.1.0",
     "jest-canvas-mock": "^2.3.1",
+    "jest-environment-jsdom": "^28.1.0",
     "jest-playwright-preset": "^1.7.0",
     "jsdom": "^19.0.0",
     "json-stringify-pretty-compact": "^4.0.0",
