--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,4 +11,7 @@ updates:
       interval: "monthly"
     ignore:
       - dependency-name: "documentation"
+      - dependency-name: "jest"
+      - dependency-name: "@types/jest"
+      - dependency-name: "ts-node"
     open-pull-requests-limit: 20
