--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "types": "dist/maplibre-gl.d.ts",
   "type": "module",
   "dependencies": {
-    "@mapbox/geojson-rewind": "^0.5.1",
+    "@mapbox/geojson-rewind": "^0.5.2",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
     "@mapbox/point-geometry": "^0.1.0",
-    "@mapbox/tiny-sdf": "^2.0.4",
+    "@mapbox/tiny-sdf": "^2.0.5",
     "@mapbox/unitbezier": "^0.0.1",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
@@ -25,37 +25,37 @@
     "@types/mapbox__vector-tile": "^1.3.0",
     "@types/pbf": "^3.0.2",
     "csscolorparser": "~1.0.3",
-    "earcut": "^2.2.3",
+    "earcut": "^2.2.4",
     "geojson-vt": "^3.2.1",
     "gl-matrix": "^3.4.3",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
     "potpack": "^1.0.2",
     "quickselect": "^2.0.0",
-    "supercluster": "^7.1.4",
+    "supercluster": "^7.1.5",
     "tinyqueue": "^2.0.3",
     "vt-pbf": "^3.1.3"
   },
   "devDependencies": {
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.3",
-    "@mapbox/mvt-fixtures": "^3.6.0",
-    "@rollup/plugin-commonjs": "^22.0.0",
+    "@mapbox/mvt-fixtures": "^3.9.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-strip": "^2.1.0",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.135",
-    "@swc/jest": "^0.2.17",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.2.210",
+    "@swc/jest": "^0.2.21",
     "@types/benchmark": "^2.1.1",
     "@types/browserify": "^12.0.37",
     "@types/cssnano": "^5.0.0",
-    "@types/d3": "^7.1.0",
+    "@types/d3": "^7.4.0",
     "@types/diff": "^5.0.2",
     "@types/earcut": "^2.1.1",
-    "@types/eslint": "^8.4.1",
+    "@types/eslint": "^8.4.5",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.0",
@@ -63,74 +63,74 @@
     "@types/minimist": "^1.2.2",
     "@types/murmurhash-js": "^1.0.3",
     "@types/nise": "^1.4.0",
-    "@types/offscreencanvas": "^2019.6.4",
+    "@types/offscreencanvas": "^2019.7.0",
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/request": "^2.48.8",
     "@types/rollup-plugin-json": "^3.0.3",
     "@types/shuffle-seed": "^1.1.0",
     "@types/supercluster": "^7.1.0",
     "@types/window-or-global": "^1.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "address": "^1.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "address": "^1.2.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
-    "canvas": "^2.9.0",
-    "cssnano": "^5.0.16",
-    "d3": "^7.3.0",
+    "canvas": "^2.9.3",
+    "cssnano": "^5.1.12",
+    "d3": "^7.6.1",
     "d3-queue": "^3.0.7",
-    "diff": "^5.0.0",
+    "diff": "^5.1.0",
     "documentation": "13.0.2",
-    "dts-bundle-generator": "^6.4.0",
-    "eslint": "^8.7.0",
+    "dts-bundle-generator": "^6.12.0",
+    "eslint": "^8.19.0",
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.0.0",
-    "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-react": "^7.28.0",
-    "gl": "^5.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-react": "^7.30.1",
+    "gl": "^5.0.3",
     "glob": "^8.0.3",
     "is-builtin-module": "^3.1.0",
     "jest": "^27.5.1",
-    "jest-canvas-mock": "^2.3.1",
-    "jest-playwright-preset": "^1.7.0",
+    "jest-canvas-mock": "^2.4.0",
+    "jest-playwright-preset": "^1.7.2",
     "jsdom": "^20.0.0",
     "json-stringify-pretty-compact": "^4.0.0",
     "mapbox-gl-styles": "^2.0.2",
-    "minimist": "^1.2.5",
+    "minimist": "^1.2.6",
     "mock-geolocation": "^1.0.11",
     "nise": "^5.1.1",
     "node-plantuml": "^0.9.0",
     "npm-font-open-sans": "^1.1.0",
     "npm-run-all": "^4.1.5",
-    "pdf-merger-js": "^3.3.2",
-    "pixelmatch": "^5.2.1",
-    "playwright": "^1.18.1",
+    "pdf-merger-js": "^3.4.0",
+    "pixelmatch": "^5.3.0",
+    "playwright": "^1.23.2",
     "pngjs": "^6.0.0",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
     "postcss-inline-svg": "^5.0.0",
     "pretty-bytes": "^6.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "request": "^2.88.0",
-    "rollup": "^2.66.1",
+    "rollup": "^2.76.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.4.0",
     "rw": "^1.3.3",
-    "semver": "^7.3.5",
+    "semver": "^7.3.7",
     "shuffle-seed": "^1.1.6",
     "source-map-explorer": "^2.5.2",
     "st": "^3.0.0",
-    "stylelint": "^14.3.0",
+    "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.6.2"
+    "ts-node": "10.7",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "generate-shaders": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-shaders.ts",
