--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "st": "^3.0.0",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
-    "ts-node": "10.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
