--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@types/eslint": "^8.4.5",
     "@types/gl": "^4.1.0",
     "@types/glob": "^7.2.0",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^28.1.6",
     "@types/jsdom": "^16.2.14",
     "@types/minimist": "^1.2.2",
     "@types/murmurhash-js": "^1.0.3",
@@ -95,9 +95,10 @@
     "gl": "^5.0.3",
     "glob": "^8.0.3",
     "is-builtin-module": "^3.1.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
     "jest-canvas-mock": "^2.4.0",
-    "jest-playwright-preset": "^1.7.2",
+    "jest-environment-jsdom": "^28.1.3",
+    "jest-playwright-preset": "^2.0.0",
     "jsdom": "^20.0.0",
     "json-stringify-pretty-compact": "^4.0.0",
     "mapbox-gl-styles": "^2.0.2",
@@ -109,7 +110,7 @@
     "npm-run-all": "^4.1.5",
     "pdf-merger-js": "^3.4.0",
     "pixelmatch": "^5.3.0",
-    "playwright": "^1.23.2",
+    "playwright": "^1.24.1",
     "pngjs": "^6.0.0",
     "postcss": "^8.4.14",
     "postcss-cli": "^10.0.0",
@@ -159,7 +160,7 @@
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-build": "jest --roots ./test/build",
+    "test-build": "jest -c ./jest.config.builds.js --roots ./test/build",
     "test-symbol-shaping": "jest --roots ./test/integration/symbol-shaping",
     "test-style-spec": "jest --roots ./test/integration/style-spec",
     "test-browser": "jest -c ./jest.config.e2e.js --roots ./test/integration/browser",
