Swap SWC with ts-jest to get type check

--- a/package.json
+++ b/package.json
@@ -46,9 +46,6 @@
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-strip": "^2.1.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.210",
-    "@swc/jest": "^0.2.21",
     "@types/benchmark": "^2.1.1",
     "@types/browserify": "^12.0.37",
     "@types/cssnano": "^5.0.0",
@@ -130,6 +127,7 @@
     "st": "^3.0.0",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
+    "ts-jest": "^28.0.7",
     "ts-node": "10.7",
     "typescript": "^4.7.4"
   },
@@ -156,18 +154,18 @@
     "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
     "start-bench": "run-p watch-css watch-benchmarks start-server-at-test",
-    "lint": "eslint --cache --ext \".ts,.tsx,.js,.html\" --ignore-path .gitignore src test build jest.config.js",
+    "lint": "eslint --cache --ext \".ts,.tsx,.js,.html\" --ignore-path .gitignore src test build",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
     "test": "run-s lint lint-css lint-docs test-unit",
-    "test-build": "jest -c ./jest.config.builds.js --roots ./test/build",
+    "test-build": "jest -c ./jest.config.builds.ts --roots ./test/build",
     "test-symbol-shaping": "jest --roots ./test/integration/symbol-shaping",
     "test-style-spec": "jest --roots ./test/integration/style-spec",
-    "test-browser": "jest -c ./jest.config.e2e.js --roots ./test/integration/browser",
+    "test-browser": "jest -c ./jest.config.e2e.ts --roots ./test/integration/browser",
     "test-render": "node --loader ts-node/esm --experimental-specifier-resolution=node --experimental-json-modules --max-old-space-size=2048 test/integration/render/render.test.ts",
-    "test-query": "jest -c ./jest.config.e2e.js --roots ./test/integration/query",
+    "test-query": "jest -c ./jest.config.e2e.ts --roots ./test/integration/query",
     "test-expression": "jest --roots ./test/integration/expression",
-    "test-unit": "jest --roots ./src",
+    "test-unit": "jest  -c ./jest.config.ts --roots ./src",
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders && npm run generate-debug-index-file",
     "benchmark": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/run-benchmarks.ts",
     "gl-stats": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/gl-stats.ts",
