Replace swc with ts-jest to typecheck most tests (#1399)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
-  "ts-node": {
-    "swc": true
-  },
   "compilerOptions": {
-    "allowJs": false,
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "checkJs": false,
     "esModuleInterop": true,
