--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
     "ts-jest": "^28.0.7",
-    "ts-node": "10.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
