--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "isolatedModules": true,
     //"importsNotUsedAsValues": "preserve",
     "jsx": "react",
-    "module": "es2022",
+    "module": "esnext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "skipLibCheck": true,
