--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "d3": "^7.6.1",
     "d3-queue": "^3.0.7",
     "diff": "^5.1.0",
-    "documentation": "13.0.2",
+    "documentation": "git://github.com/documentationjs/documentation.git#ab0cade417220beaefa1af17d03ec16b47db72fd",
     "dts-bundle-generator": "^6.12.0",
     "eslint": "^8.19.0",
     "eslint-config-mourner": "^3.0.0",
