--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/window-or-global": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "acorn-import-assertions": "^1.8.0",
     "address": "^1.2.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
@@ -117,9 +118,10 @@
     "react-dom": "^18.2.0",
     "request": "^2.88.0",
     "rollup": "^2.76.0",
+    "rollup-plugin-import-assert": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-unassert": "^0.4.0",
+    "rollup-plugin-unassert": "git://github.com/birkskyum/rollup-plugin-unassert.git#94c2fc4992b8bf008da4d85e814d90e291367303",
     "rw": "^1.3.3",
     "semver": "^7.3.7",
     "shuffle-seed": "^1.1.6",
@@ -128,7 +130,7 @@
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
     "ts-jest": "^28.0.7",
-    "ts-node": "10.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
@@ -169,7 +171,8 @@
     "codegen": "npm run generate-style-code && npm run generate-struct-arrays && npm run generate-style-spec && npm run generate-shaders && npm run generate-debug-index-file",
     "benchmark": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/run-benchmarks.ts",
     "gl-stats": "node --loader ts-node/esm --experimental-specifier-resolution=node test/bench/gl-stats.ts",
-    "postinstall": "node ./postinstall.js"
+    "postinstall": "node ./postinstall.js",
+    "typecheck": "tsc --project tsconfig.typecheck.json"
   },
   "files": [
     "build/",
