--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,7 @@
     "no-invalid-this": "off",
     "no-buffer-constructor": "off",
 
-    "array-bracket-spacing": "off",
+    "array-bracket-spacing": "error",
     "consistent-return": "off",
     "global-require": "off",
     "import/no-commonjs": "error",
