linting: key-spacing

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,7 +50,7 @@
     "import/no-commonjs": "error",
     // TSC throws an error on unresolved imports; eslint doesn't understand .js extension in import statement
     "import/no-unresolved": "off",
-    "key-spacing": "off",
+    "key-spacing": "error",
     "no-eq-null": "off",
     "no-lonely-if": "off",
     "no-new": "off",
