--- a/package.json
+++ b/package.json
@@ -121,7 +121,6 @@
     "rollup-plugin-import-assert": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
-    "unassert-rollup-plugin": "^1.0.4",
     "rw": "^1.3.3",
     "semver": "^7.3.7",
     "shuffle-seed": "^1.1.6",
@@ -131,7 +130,8 @@
     "stylelint-config-standard": "^26.0.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "unassert-rollup-plugin": "^1.0.15"
   },
   "scripts": {
     "generate-shaders": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-shaders.ts",
