--- a/.github/workflows/test-browser.yml
+++ b/.github/workflows/test-browser.yml
@@ -19,4 +19,4 @@ jobs:
           architecture: x64
       - run: npm ci
       - run: npm run build-dev
-      - run: npm run test-browser
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-browser
