--- a/.github/workflows/test-browser.yml
+++ b/.github/workflows/test-browser.yml
@@ -12,6 +12,10 @@ jobs:
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
+      - name: Install fonts-noto-cjk
+        run: |
+          sudo apt-get update
+          sudo apt-get install fonts-noto-cjk
       - name: Use Node.js 16 x64
         uses: actions/setup-node@v2
         with:
