--- a/.github/workflows/test-browser.yml
+++ b/.github/workflows/test-browser.yml
@@ -7,11 +7,15 @@ on:
 
 jobs:
   test_browser:
-    name: macos-latest
-    runs-on: macos-latest
+    name: ubuntu-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
+      - name: Install fonts-noto-cjk
+        run: |
+          sudo apt-get update
+          sudo apt-get install fonts-noto-cjk
       - name: Use Node.js 16 x64
         uses: actions/setup-node@v2
         with:
@@ -19,4 +23,4 @@ jobs:
           architecture: x64
       - run: npm ci
       - run: npm run build-dev
-      - run: npm run test-browser
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-browser
