--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,4 @@ updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "documentation"
+      interval: "weekly"
