--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
   },
