--- a/.github/workflows/publish-style-spec.yml
+++ b/.github/workflows/publish-style-spec.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build style spec
         run: |
           npm run build-style-spec
+          npm run generate-typings
           cp -r dist/style-spec/* src/style-spec/dist
       
       - name: Check version and publish
