--- a/package.json
+++ b/package.json
@@ -128,8 +128,7 @@
     "stylelint-config-standard": "^26.0.0",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-    "unassert-rollup-plugin": "^2.0.0"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "generate-shaders": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-shaders.ts",
