--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-react": "^7.30.1",
     "gl": "^5.0.3",
     "glob": "^8.0.3",
+    "global-prefix": "^3.0.0",
     "is-builtin-module": "^3.2.0",
     "jest": "^28.1.3",
     "jest-canvas-mock": "^2.4.0",
