--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "earcut": "^2.2.4",
     "geojson-vt": "^3.2.1",
     "gl-matrix": "^3.4.3",
+    "global-prefix": "^3.0.0",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
     "potpack": "^1.0.2",
