--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{matrix.os}}
+  strategy:
+    matrix:
+      os: [ubuntu-latest, windows-latest]
+                
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
