--- a/.github/workflows/test-browser.yml
+++ b/.github/workflows/test-browser.yml
@@ -39,20 +39,20 @@ jobs:
         os:
           - ubuntu-latest
 
-      name: ${{ matrix.os }}
-      runs-on: ${{ matrix.os }}
-      timeout-minutes: 20
-      steps:
-        - uses: actions/checkout@v3
-        - name: Install fonts-noto-cjk
-          run: |
-            sudo apt-get update
-            sudo apt-get install fonts-noto-cjk
-        - name: Use Node.js 16 x64
-          uses: actions/setup-node@v3.4.1
-          with:
-            node-version: 16
-            architecture: x64
-        - run: npm ci
-        - run: npm run build-dev
-        - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-browser
+    name: ubuntu-latest
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install fonts-noto-cjk
+        run: |
+          sudo apt-get update
+          sudo apt-get install fonts-noto-cjk
+      - name: Use Node.js 16 x64
+        uses: actions/setup-node@v3.4.1
+        with:
+          node-version: 16
+          architecture: x64
+      - run: npm ci
+      - run: npm run build-dev
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-browser
