add minimalistic tile server

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "semver": "^7.3.7",
     "shuffle-seed": "^1.1.6",
     "source-map-explorer": "^2.5.2",
+    "sqlite3": "^5.0.11",
     "st": "^3.0.0",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^28.0.0",
@@ -150,8 +151,8 @@
     "watch-css": "postcss --watch -o dist/maplibre-gl.css src/css/maplibre-gl.css",
     "build-benchmarks": "npm run build-dev && rollup --configPlugin @rollup/plugin-typescript -c test/bench/rollup_config_benchmarks.ts",
     "watch-benchmarks": "rollup --configPlugin @rollup/plugin-typescript -c test/bench/rollup_config_benchmarks.ts --watch",
-    "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
-    "start-server-at-test": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html -d test",
+    "start-server": "node --loader ts-node/esm --experimental-specifier-resolution=node test/server.ts",
+    "start-server-at-test": "node --loader ts-node/esm --experimental-specifier-resolution=node test/server.ts -d test",
     "start": "run-p watch-css start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
     "start-bench": "run-p watch-css watch-benchmarks start-server-at-test",
