Remove code review annotations (#1623)
* Update test-unit.yml

Remove annotations

* Update test-unit.yml

--- a/.github/workflows/test-unit.yml
+++ b/.github/workflows/test-unit.yml
@@ -35,7 +35,7 @@ jobs:
         id: coverage
         with:
           output: report-markdown
-          annotations: ${{ github.event.pull_request.head.repo.full_name == github.event.repository.name && 'coverage' || 'none' }}
+          annotations: none
           test-script: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-unit-ci            
       - uses: marocchino/sticky-pull-request-comment@v2
         with:
